collectd (5.6.1-1) UNRELEASED; urgency=medium

  * New upstream release.
    - write_graphite plugin is no longer linked against libyajl. Thanks to
      Shish for reporting this (Closes: #839771).
    - rrdcached plugin now reconnects to daemon. Thanks to Matthias Urlichs
      for reporting this (Closes: #657877).
  * debian/rules:
    - Disable building the barometer, drbd, fhcount and ipc plugins on
      kfreebsd architectures, as they are Linux-only.

 -- Marc Fournier <marc@bl.uem.li>  Sun, 09 Oct 2016 20:41:36 +0200

collectd (5.6.0-1) unstable; urgency=medium

  * New upstream release.
    - The disk plugin now supports FreeBSD; enable it in debian/rules.
    - Suppress spammy debug messages; thanks to Antonio Russo for reporting
      this (Closes: #797687).
    New plugins:
    - Chrony daemon statistics: chrony
    - CPU sleep: Time spent in suspend: cpusleep (Linux-specific)
    - Monitor gps related data through gpsd: gps
    - Send or receive values over the network using the gRPC framework: grpc
      (disabled in Debian because of missing dependencies)
    - Lua interpreter embedded into collectd: lua
    - Publishes and subscribes to MQTT topics: mqtt
    - Submit notifications as passive check results to a local nagios
      instance: notify_nagios
    - XEN Hypervisor CPU stats: xencpu
    - Solaris zone metrics: zone (disabled in Debian; Solaris specific)
  * debian/rules:
    - Disable cpusleep plugin on non-Linux.
    - Disable xencpu plugin except on amd64, arm64, armhf, and i386.
    - Disable the zone plugin.
    - Do not cripple include files in collectd-dev when patching them; thanks
      to Scott Talbert for reporting this (Closes: #827759).
  * debian/control:
    - Build-depend on libgps-dev: Needed by the new gps plugin.
    - Build-depend on liblua5.3-dev: Needed by the new lua plugin.
    - Build-depend on libmosquitto-dev: Needed by the new mqtt plugin.
    - Build-depend on libxen-dev [amd64 arm64 armhf i386]: Needed by the new