@@ -9,7 +9,7 @@ index ceb0b30..2d05efa 100644
  	then
  		AC_MSG_CHECKING([for jni.h])
 -		TMPVAR=`find -L "$with_java_home" -name jni.h -type f -exec 'dirname' '{}' ';' 2>/dev/null | head -n 1`
-+		TMPVAR=`LC_ALL=C find -L "$with_java_home" -name jni.h -type f -exec 'dirname' '{}' ';' 2>/dev/null | head -n 1`
++		TMPVAR=`LC_ALL=C find -L "$with_java_home" -name jni.h -type f -exec 'dirname' '{}' ';' 2>/dev/null | sort | head -n 1`
  		if test "x$TMPVAR" != "x"
  		then
  			AC_MSG_RESULT([found in $TMPVAR])
@@ -18,7 +18,7 @@ index ceb0b30..2d05efa 100644
  
  		AC_MSG_CHECKING([for jni_md.h])
 -		TMPVAR=`find -L "$with_java_home" -name jni_md.h -type f -exec 'dirname' '{}' ';' 2>/dev/null | head -n 1`
-+		TMPVAR=`LC_ALL=C find -L "$with_java_home" -name jni_md.h -type f -exec 'dirname' '{}' ';' 2>/dev/null | head -n 1`
++		TMPVAR=`LC_ALL=C find -L "$with_java_home" -name jni_md.h -type f -exec 'dirname' '{}' ';' 2>/dev/null | sort | head -n 1`
  		if test "x$TMPVAR" != "x"
  		then
  			AC_MSG_RESULT([found in $TMPVAR])
@@ -27,7 +27,7 @@ index ceb0b30..2d05efa 100644
  
  		AC_MSG_CHECKING([for libjvm.so])
 -		TMPVAR=`find -L "$with_java_home" -type f \( -name libjvm.so -o -name libjvm.dylib \) -exec 'dirname' '{}' ';' 2>/dev/null | head -n 1`
-+		TMPVAR=`LC_ALL=C find -L "$with_java_home" -type f \( -name libjvm.so -o -name libjvm.dylib \) -exec 'dirname' '{}' ';' 2>/dev/null | head -n 1`
++		TMPVAR=`LC_ALL=C find -L "$with_java_home" -type f \( -name libjvm.so -o -name libjvm.dylib \) -exec 'dirname' '{}' ';' 2>/dev/null | sort | head -n 1`
  		if test "x$TMPVAR" != "x"
  		then
  			AC_MSG_RESULT([found in $TMPVAR])
@@ -36,7 +36,7 @@ index ceb0b30..2d05efa 100644
  		then
  			AC_MSG_CHECKING([for javac])
 -			TMPVAR=`find -L "$with_java_home" -name javac -type f 2>/dev/null | head -n 1`
-+			TMPVAR=`LC_ALL=C find -L "$with_java_home" -name javac -type f 2>/dev/null | head -n 1`
++			TMPVAR=`LC_ALL=C find -L "$with_java_home" -name javac -type f 2>/dev/null | sort | head -n 1`
  			if test "x$TMPVAR" != "x"
  			then
  				JAVAC="$TMPVAR"
@@ -45,7 +45,7 @@ index ceb0b30..2d05efa 100644
  		then
  			AC_MSG_CHECKING([for jar])
 -			TMPVAR=`find -L "$with_java_home" -name jar -type f 2>/dev/null | head -n 1`
-+			TMPVAR=`LC_ALL=C find -L "$with_java_home" -name jar -type f 2>/dev/null | head -n 1`
++			TMPVAR=`LC_ALL=C find -L "$with_java_home" -name jar -type f 2>/dev/null | sort | head -n 1`
  			if test "x$TMPVAR" != "x"
  			then
  				JAR="$TMPVAR"
